--- a/hello-world.html
+++ b/hello-world.html
@@ -1,2 +1,19 @@
-<h1>Hello,world!</h1>
-<p>Welcome to my first website! I am about to embark on the exciting journey of learning how to code. Won't you join me?</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
+  <title>Document</title>
+</head>
+<body>
+  <div class="intro">
+    <h1>Welcome</h1>  
+    <div>
+      <p> ipsum dolor sit amet consectetur adipisicing elit.<br> Consequuntur, maiores obcaecati? Similique, obcaecati?<br> Expedita esse earum, commodi, corrupti asperiores officiis<br> quia rem animi voluptas modi, iure a nisi id mollitia.</p>
+    </div>
+  </div>
+</body>
+</html>
